Split core and CLI into Maven modules